ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration4/input.ts.stderr
error: `declare` modifier cannot appear on a class element
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration4/input.ts:2:3
  |
2 |   declare constructor() { }
  |   ^^^^^^^

